finalisation chat + fix qr code

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "/assets",
+                "input": "/"
               }
             ],
             "styles": [
